xddd
updated a bit xdd